<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mad-Marvel</string>
    <string name="developer">Roger Silva</string>
    <string name="git_hub">https://github.com/RogerSilva2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_item_characters">Characters</string>
    <string name="menu_item_comics">Comics</string>
    <string name="menu_item_creators">Creators</string>
    <string name="menu_item_events">Events</string>
    <string name="menu_item_series">Series</string>
    <string name="menu_item_stories">Stories</string>

    <string name="message_loading">Loading</string>
    <string name="message_connectivity_error">No Internet</string>

    <string name="action_acknowledgments">Acknowledgments</string>
    <string name="action_try_again">Try again</string>

    <string name="text_marvel_title">Company Info</string>
    <string name="text_marvel_description">Marvel Entertainment, LLC, a wholly-owned subsidiary of The Walt Disney Company, is one of the world\'s most prominent character-based entertainment companies, built on a proven library of more than 8,000 characters featured in a variety of media over seventy-five years. Marvel utilizes its character franchises in entertainment, licensing and publishing. For more information visit marvel.com. © 2017 MARVEL</string>

    <string name="error_server_unavailable">Error server unavailable</string>
    <string name="error_getting_character">Error getting character</string>
    <string name="error_getting_characters">Error getting characters</string>
    <string name="error_getting_comic">Error getting comic</string>
    <string name="error_getting_comics">Error getting comics</string>
    <string name="error_getting_creator">Error getting creator</string>
    <string name="error_getting_creators">Error getting creators</string>
    <string name="error_getting_event">Error getting event</string>
    <string name="error_getting_events">Error getting events</string>
    <string name="error_getting_series">Error getting series</string>
    <string name="error_getting_story">Error getting story</string>
    <string name="error_getting_stories">Error getting stories</string>
    <string name="error_getting_property">Error getting property</string>
</resources>