<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@mipmap/ic_action_person"
            android:title="@string/menu_item_characters"
            android:checked="true" />
        <item
            android:id="@+id/nav_comics"
            android:icon="@mipmap/ic_action_high_quality"
            android:title="@string/menu_item_comics" />
        <item
            android:id="@+id/nav_creators"
            android:icon="@mipmap/ic_action_colorize"
            android:title="@string/menu_item_creators" />
        <item
            android:id="@+id/nav_events"
            android:icon="@mipmap/ic_action_event"
            android:title="@string/menu_item_events" />
        <item
            android:id="@+id/nav_series"
            android:icon="@mipmap/ic_action_library_books"
            android:title="@string/menu_item_series" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@mipmap/ic_action_book"
            android:title="@string/menu_item_stories" />
    </group>

</menu>